waypoint/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waypoint
  namespace: waypoint
  labels:
    app: waypoint
spec:
  selector:
    app: waypoint
  ports:
    - name: waypointhttp
      port: 9702
      targetPort: 9702
